--- a/workshop1/workshop1.ipynb
+++ b/workshop1/workshop1.ipynb
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can represent matrix multiplication and matrix-vector multiplication with np.dot()."
+    "We can represent matrix multiplication and matrix-vector multiplication with the `@` operator or `np.dot()`."
    ]
   },
   {
@@ -195,11 +195,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "right_product = np.dot(A, B)\n",
+    "right_product = A @ B\n",
+    "# The following line is equivalent\n",
+    "# right_product = np.dot(A, B)\n",
     "print(right_product)\n",
     "print()\n",
     "\n",
-    "left_product = np.dot(B, A)\n",
+    "left_product = B @ A\n",
+    "# The follwing line is equivalent\n",
+    "# left_product = np.dot(B, A)\n",
     "print(left_product)"
    ]
   },
@@ -207,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to matrix multiplication, the order in which you enter arguments into np.dot() is very important."
+    "Similar to matrix multiplication, the order in which you enter arguments into `@` or `np.dot()` is very important."
    ]
   },
   {
@@ -227,6 +231,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here is where numpy really shines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_a_arr = np.random.randn(10**3)\n",
+    "test_b_arr = np.random.randn(10**3)\n",
+    "\n",
+    "# copy the vectors as lists\n",
+    "test_a_list = list(test_a_arr)\n",
+    "test_b_list = list(test_b_arr)\n",
+    "\n",
+    "def python_matmul(matrix1,matrix2):\n",
+    "    results = []\n",
+    "    try:\n",
+    "        for i in range(len(matrix1)):\n",
+    "            rows = []\n",
+    "            for j in range(len(matrix2[0])):\n",
+    "                item = 0\n",
+    "                for k in range(len(matrix1[0])):\n",
+    "                    item += matrix1[i][k] * matrix2[k][j]\n",
+    "                rows.append(item)\n",
+    "            results.append(rows)\n",
+    "        return results\n",
+    "    except:\n",
+    "        return \"These matrices aren't compatible.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit -n 10 test_a_arr @ test_b_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit -n 10 python_matmul(test_a_list, test_b_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are many ways to instantiate ndarrays in numpy. Here are two common ways:"
    ]
   },
@@ -237,6 +295,9 @@
    "outputs": [],
    "source": [
     "zero_array = np.zeros((2, 2))\n",
+    "# Note that this is essentially the following\n",
+    "# zero_array = np.zeros(shape=(2, 2))\n",
+    "\n",
     "print(zero_array)\n",
     "print()\n",
     "\n",
@@ -248,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both of these ways of instantiating arrays involve entering the desired dimensions into their respective functions. However, np.zeros() requires the dimensions to be contained inside parentheses, while np.random.rand() wants the dimensions to be entered as separate arguments. These small details are always difficult to remember, so you may often have to refer to the [numpy documentation](https://docs.scipy.org/doc/numpy/reference/index.html \"Numpy Documentation\")."
+    "Both of these ways of instantiating arrays involve entering the desired dimensions into their respective functions. However, `np.zeros()` requires the dimensions to be contained inside parentheses (it expects a tuple, specifically), while `np.random.rand()` wants the dimensions to be entered as separate arguments. These small details are always difficult to remember, so you may often have to refer to the [numpy documentation](https://docs.scipy.org/doc/numpy/reference/index.html \"Numpy Documentation\")."
    ]
   },
   {
@@ -259,14 +320,20 @@
    "source": [
     "### TODO: Constuct a random 5 x 4 array. Matrix multiply this with B and then print the result.\n",
     "###       Remember, order matters!\n",
-    "\n",
     "###"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
