:sparkles: Updated workshop 2+

--- a/workshop1/workshop1.ipynb
+++ b/workshop1/workshop1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([1, 2, 3, 4])\n",
     "\n",
@@ -47,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of A: (4,)\n"
+     ]
+    }
+   ],
    "source": [
     "# We can find the dimensions of A like so:\n",
     "dim_A = A.shape\n",
@@ -73,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2 7]\n",
+      "Before modifying: [1 2 7 4]\n",
+      "After modifying: [1 2 7 4]\n"
+     ]
+    }
+   ],
    "source": [
     "x = A[0]\n",
     "print(x)\n",
@@ -97,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "B = np.array([ [1, 2, 3, 4],\n",
     "               [5, 6, 7, 8],\n",
@@ -118,12 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: print the dimensions of B below\n",
-    "\n",
+    "print(B.shape)\n",
     "###"
    ]
   },
@@ -143,9 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A single entry: 3\n",
+      "The first column: [ 1  5  9 13]\n",
+      "The first row: [1 2 3 4]\n",
+      "The second row: [5 6 7 8]\n",
+      "A crop from B:\n",
+      "[[2 3]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "y = B[0, 2]\n",
     "print(\"A single entry: {}\".format(y))\n",
@@ -164,12 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 7 11 15]\n",
+      "[ 7 11 15]\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: print one slice containing the last three entries of the third column of B\n",
-    "\n",
+    "print(B[-3:, 2])\n",
+    "print(B[1:, 2])\n",
     "###"
    ]
   },
@@ -191,9 +261,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 7 4]\n",
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[126 140 154 168]\n",
+      "\n",
+      "[ 42  98 154 210]\n"
+     ]
+    }
+   ],
    "source": [
     "right_product = A @ B\n",
     "# The following line is equivalent\n",
@@ -216,13 +318,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n",
+      "[[ 1  2  3]\n",
+      " [ 5  6  7]\n",
+      " [ 9 10 11]]\n",
+      "[[ 6  7  8]\n",
+      " [10 11 12]\n",
+      " [14 15 16]]\n",
+      "[[ 6  7  8]\n",
+      " [10 11 12]\n",
+      " [14 15 16]]\n",
+      "[[  1  68  74  80]\n",
+      " [  5 188 206 224]\n",
+      " [  9 308 338 368]\n",
+      " [ 13  14  15  16]]\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Print out the matrix product between the upper-leftmost 3 x 3 crop of B \n",
     "###       and the lower-rightmost 3 x 3 crop of B.\n",
     "###       Then, replace the upper-rightmost 3 x 3 section of B with that product, and print B\n",
+    "print(B)\n",
+    "print(B[:3, :3])\n",
+    "print(B[-3:, -3:])\n",
+    "print(B[1:, 1:])  # Same as above\n",
+    "\n",
+    "temp = B[:3, :3] @ B[-3:, -3:]\n",
+    "B[:3, 1:4] = temp\n",
+    "\n",
+    "print(B)\n",
     "\n",
     "###"
    ]
@@ -236,12 +371,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_a_arr = np.random.randn(10**3)\n",
-    "test_b_arr = np.random.randn(10**3)\n",
+    "test_a_arr = np.random.randn(10**7)\n",
+    "test_b_arr = np.random.randn(10**7)\n",
     "\n",
     "# copy the vectors as lists\n",
     "test_a_list = list(test_a_arr)\n",
@@ -265,18 +400,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 ms ± 1.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 test_a_arr @ test_b_arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.75 µs ± 277 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 python_matmul(test_a_list, test_b_list)"
    ]
@@ -290,13 +441,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n",
+      "\n",
+      "[[0.64791036 0.20114457 0.69889363]\n",
+      " [0.87069151 0.46340352 0.90797783]\n",
+      " [0.96307451 0.68254943 0.54090394]\n",
+      " [0.9593027  0.04327166 0.77401833]]\n"
+     ]
+    }
+   ],
    "source": [
     "zero_array = np.zeros((2, 2))\n",
     "# Note that this is essentially the following\n",
-    "# zero_array = np.zeros(shape=(2, 2))\n",
+    "zero_array = np.zeros(shape=(2, 2))\n",
     "\n",
     "print(zero_array)\n",
     "print()\n",
@@ -314,13 +479,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 15.15400012 115.24121604 125.72229766 136.20337928]\n",
+      " [ 15.9875471  247.19124284 270.34729936 293.50335588]\n",
+      " [ 10.41693007 369.49865825 405.04402787 440.58939749]\n",
+      " [ 16.76016684 364.77245336 399.76758043 434.76270749]\n",
+      " [ 10.3762827  182.0449465  199.28897216 216.53299782]]\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Constuct a random 5 x 4 array. Matrix multiply this with B and then print the result.\n",
     "###       Remember, order matters!\n",
-    "###"
+    "###\n",
+    "\n",
+    "our_random_array = np.random.rand(5, 4)\n",
+    "print(our_random_array @ B)"
    ]
   },
   {
